src/parsers/allies.c

#line 1 "../src/parsers/allies.c.rl"
#include "parsers/parsers.h"

enum { BRANCHES = 5 };


#line 113 "../src/parsers/allies.c.rl"



#line 13 "../src/parsers/allies.c"
static const int allies_start = 127;
static const int allies_first_final = 127;
static const int allies_error = -1;

static const int allies_en_main = 127;


#line 116 "../src/parsers/allies.c.rl"

#ifdef __cplusplus
extern "C" {
#endif

void cParseAlliesInit(Fsm* fsm) {
    Fsm f = *fsm;
    
#line 30 "../src/parsers/allies.c"
	{
	 f.cs = allies_start;
	 f.ts = 0;
	 f.te = 0;
	 f.act = 0;
	}

#line 124 "../src/parsers/allies.c.rl"
    *fsm = f;
}

int32_t cParseAlliesExec(Fsm* fsm) {
    Fsm f = *fsm;//Drop one level of indirection.
    const char* const eof = f.pe;
    const char* lmargin[BRANCHES + 1] = { f.pe };
    const char* rmargin1 = f.p;
    f.branch = 0;
    f.cap[0].ptr = f.p;
    
#line 50 "../src/parsers/allies.c"
	{
	if ( ( f.p) == ( f.pe) )
		goto _test_eof;
	switch (  f.cs )
	{
tr0:
#line 111 "../src/parsers/allies.c.rl"
	{{( f.p) = (( f.te))-1;}}
	goto st127;
tr14:
#line 44 "../src/parsers/allies.c.rl"
	{ f.te = ( f.p)+1;{
        f.branch = 1;
        {( f.p) = (( rmargin1))-1;}
        {( f.p)++;  f.cs = 127; goto _out;}
    }}
	goto st127;
tr40:
#line 60 "../src/parsers/allies.c.rl"
	{ f.te = ( f.p)+1;{
        f.branch = 4;
        {( f.p)++;  f.cs = 127; goto _out;}
    }}
	goto st127;
tr75:
#line 60 "../src/parsers/allies.c.rl"
	{{( f.p) = (( f.te))-1;}{
        f.branch = 4;
        {( f.p)++;  f.cs = 127; goto _out;}
    }}
	goto st127;
tr87:
#line 65 "../src/parsers/allies.c.rl"
	{ f.te = ( f.p)+1;{
        f.branch = 5;
        ( f.p)--;
        {( f.p)++;  f.cs = 127; goto _out;}
    }}
	goto st127;
tr111:
#line 1 "NONE"
	{	switch(  f.act ) {
	case 2:
	{{( f.p) = (( f.te))-1;}
        f.branch = 2;
        {( f.p)++;  f.cs = 127; goto _out;}
    }
	break;
	case 3:
	{{( f.p) = (( f.te))-1;}
        f.branch = 3;
        {( f.p)++;  f.cs = 127; goto _out;}
    }
	break;
	default:
	{{( f.p) = (( f.te))-1;}}
	break;
	}
	}
	goto st127;
tr144:
#line 111 "../src/parsers/allies.c.rl"
	{ f.te = ( f.p)+1;}
	goto st127;
tr149:
#line 111 "../src/parsers/allies.c.rl"
	{ f.te = ( f.p);( f.p)--;}
	goto st127;
tr152:
#line 60 "../src/parsers/allies.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 4;
        {( f.p)++;  f.cs = 127; goto _out;}
    }}
	goto st127;
tr156:
#line 55 "../src/parsers/allies.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 3;
        {( f.p)++;  f.cs = 127; goto _out;}
    }}
	goto st127;
tr157:
#line 50 "../src/parsers/allies.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 2;
        {( f.p)++;  f.cs = 127; goto _out;}
    }}
	goto st127;
st127:
#line 1 "NONE"
	{ f.ts = 0;}
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof127;
case 127:
#line 1 "NONE"
	{ f.ts = ( f.p);}
#line 148 "../src/parsers/allies.c"
	switch( (*( f.p)) ) {
		case -30: goto tr145;
		case 60: goto tr146;
		case 62: goto tr147;
		case 115: goto tr148;
	}
	goto tr144;
tr145:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
#line 12 "../src/parsers/allies.c.rl"
	{
        lmargin[1] = ( f.p);
    }
	goto st128;
st128:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof128;
case 128:
#line 168 "../src/parsers/allies.c"
	if ( (*( f.p)) == -106 )
		goto st0;
	goto tr149;
st0:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof0;
case 0:
	if ( (*( f.p)) == -68 )
		goto st1;
	goto tr0;
st1:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof1;
case 1:
	if ( (*( f.p)) == 60 )
		goto tr2;
	goto tr0;
tr2:
#line 32 "../src/parsers/allies.c.rl"
	{
        rmargin1 = ( f.p);
    }
	goto st2;
st2:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof2;
case 2:
#line 196 "../src/parsers/allies.c"
	if ( (*( f.p)) == 47 )
		goto st3;
	goto tr0;
st3:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof3;
case 3:
	if ( (*( f.p)) == 100 )
		goto st4;
	goto tr0;
st4:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof4;
case 4:
	if ( (*( f.p)) == 105 )
		goto st5;
	goto tr0;
st5:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof5;
case 5:
	if ( (*( f.p)) == 118 )
		goto st6;
	goto tr0;
st6:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof6;
case 6:
	if ( (*( f.p)) == 62 )
		goto st7;
	goto tr0;
st7:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof7;
case 7:
	if ( (*( f.p)) == 62 )
		goto st8;
	goto st7;
st8:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof8;
case 8:
	switch( (*( f.p)) ) {
		case 40: goto st9;
		case 62: goto st8;
	}
	goto st7;
st9:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof9;
case 9:
	switch( (*( f.p)) ) {
		case 41: goto tr11;
		case 60: goto tr0;
	}
	goto tr10;
tr10:
#line 36 "../src/parsers/allies.c.rl"
	{
        f.cap[1].ptr = ( f.p);
    }
	goto st10;
st10:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof10;
case 10:
#line 263 "../src/parsers/allies.c"
	switch( (*( f.p)) ) {
		case 41: goto tr13;
		case 60: goto tr0;
	}
	goto st10;
tr11:
#line 36 "../src/parsers/allies.c.rl"
	{
        f.cap[1].ptr = ( f.p);
    }
#line 40 "../src/parsers/allies.c.rl"
	{
        f.cap[1].len = (size_t)(( f.p) - f.cap[1].ptr);
    }
	goto st11;
tr13:
#line 40 "../src/parsers/allies.c.rl"
	{
        f.cap[1].len = (size_t)(( f.p) - f.cap[1].ptr);
    }
	goto st11;
st11:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof11;
case 11:
#line 289 "../src/parsers/allies.c"
	switch( (*( f.p)) ) {
		case 41: goto tr13;
		case 60: goto tr14;
	}
	goto st10;
tr146:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
#line 24 "../src/parsers/allies.c.rl"
	{
        lmargin[4] = ( f.p);
    }
	goto st129;
st129:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof129;
case 129:
#line 307 "../src/parsers/allies.c"
	switch( (*( f.p)) ) {
		case 97: goto st12;
		case 115: goto st38;
	}
	goto tr149;
st12:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof12;
case 12:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 99: goto st13;
	}
	goto st12;
st13:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof13;
case 13:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 99: goto st13;
		case 108: goto st14;
	}
	goto st12;
st14:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof14;
case 14:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 97: goto st15;
		case 99: goto st13;
	}
	goto st12;
st15:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof15;
case 15:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 99: goto st13;
		case 115: goto st16;
	}
	goto st12;
st16:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof16;
case 16:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 99: goto st13;
		case 115: goto st17;
	}
	goto st12;
st17:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof17;
case 17:
	switch( (*( f.p)) ) {
		case 61: goto st18;
		case 99: goto st13;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st12;
st18:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof18;
case 18:
	switch( (*( f.p)) ) {
		case 61: goto st12;
		case 99: goto st19;
		case 112: goto st22;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st18;
st19:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof19;
case 19:
	switch( (*( f.p)) ) {
		case 61: goto st12;
		case 99: goto st19;
		case 108: goto st20;
		case 112: goto st22;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st18;
st20:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof20;
case 20:
	switch( (*( f.p)) ) {
		case 61: goto st12;
		case 97: goto st21;
		case 99: goto st19;
		case 112: goto st22;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st18;
st21:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof21;
case 21:
	switch( (*( f.p)) ) {
		case 61: goto st12;
		case 99: goto st19;
		case 112: goto st22;
		case 115: goto st36;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st18;
st22:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof22;
case 22:
	switch( (*( f.p)) ) {
		case 61: goto st12;
		case 99: goto st19;
		case 109: goto st23;
		case 112: goto st22;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st18;
st23:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof23;
case 23:
	switch( (*( f.p)) ) {
		case 61: goto st12;
		case 95: goto st24;
		case 99: goto st19;
		case 112: goto st22;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st18;
st24:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof24;
case 24:
	switch( (*( f.p)) ) {
		case 61: goto st12;
		case 99: goto st19;
		case 108: goto st25;
		case 112: goto st22;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st18;
st25:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof25;
case 25:
	switch( (*( f.p)) ) {
		case 61: goto st12;
		case 99: goto st19;
		case 105: goto st26;
		case 112: goto st22;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st18;
st26:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof26;
case 26:
	switch( (*( f.p)) ) {
		case 61: goto st12;
		case 99: goto st19;
		case 110: goto st27;
		case 112: goto st22;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st18;
st27:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof27;
case 27:
	switch( (*( f.p)) ) {
		case 61: goto st12;
		case 99: goto st19;
		case 107: goto st28;
		case 112: goto st22;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st18;
st28:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof28;
case 28:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto st29;
	}
	goto st28;
st29:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof29;
case 29:
	if ( (*( f.p)) == -30 )
		goto st30;
	goto tr0;
st30:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof30;
case 30:
	if ( (*( f.p)) == -98 )
		goto st31;
	goto tr0;
st31:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof31;
case 31:
	if ( (*( f.p)) == -92 )
		goto st32;
	goto tr0;
st32:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof32;
case 32:
	if ( (*( f.p)) == 60 )
		goto st33;
	goto tr0;
st33:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof33;
case 33:
	if ( (*( f.p)) == 47 )
		goto st34;
	goto tr0;
st34:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof34;
case 34:
	if ( (*( f.p)) == 97 )
		goto st35;
	goto tr0;
st35:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof35;
case 35:
	if ( (*( f.p)) == 62 )
		goto tr40;
	goto tr0;
st36:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof36;
case 36:
	switch( (*( f.p)) ) {
		case 61: goto st12;
		case 99: goto st19;
		case 112: goto st22;
		case 115: goto st37;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st18;
st37:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof37;
case 37:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 99: goto st19;
		case 112: goto st22;
	}
	goto st18;
st38:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof38;
case 38:
	if ( (*( f.p)) == 112 )
		goto st39;
	goto tr0;
st39:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof39;
case 39:
	if ( (*( f.p)) == 97 )
		goto st40;
	goto tr0;
st40:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof40;
case 40:
	if ( (*( f.p)) == 110 )
		goto st41;
	goto tr0;
st41:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof41;
case 41:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 99: goto st42;
	}
	goto st41;
st42:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof42;
case 42:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 99: goto st42;
		case 108: goto st43;
	}
	goto st41;
st43:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof43;
case 43:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 97: goto st44;
		case 99: goto st42;
	}
	goto st41;
st44:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof44;
case 44:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 99: goto st42;
		case 115: goto st45;
	}
	goto st41;
st45:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof45;
case 45:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 99: goto st42;
		case 115: goto st46;
	}
	goto st41;
st46:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof46;
case 46:
	switch( (*( f.p)) ) {
		case 61: goto st47;
		case 99: goto st42;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st41;
st47:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof47;
case 47:
	switch( (*( f.p)) ) {
		case 61: goto st41;
		case 99: goto st48;
		case 108: goto st51;
		case 114: goto st51;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st47;
st48:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof48;
case 48:
	switch( (*( f.p)) ) {
		case 61: goto st41;
		case 99: goto st48;
		case 108: goto st49;
		case 114: goto st51;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st47;
st49:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof49;
case 49:
	switch( (*( f.p)) ) {
		case 61: goto st41;
		case 95: goto st50;
		case 97: goto st77;
		case 99: goto st48;
		case 108: goto st51;
		case 114: goto st51;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st47;
st50:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof50;
case 50:
	switch( (*( f.p)) ) {
		case 61: goto st41;
		case 99: goto st48;
		case 108: goto st51;
		case 114: goto st51;
		case 115: goto st52;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st47;
st51:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof51;
case 51:
	switch( (*( f.p)) ) {
		case 61: goto st41;
		case 95: goto st50;
		case 99: goto st48;
		case 108: goto st51;
		case 114: goto st51;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st47;
st52:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof52;
case 52:
	switch( (*( f.p)) ) {
		case 61: goto st41;
		case 99: goto st48;
		case 108: goto st53;
		case 114: goto st51;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st47;
st53:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof53;
case 53:
	switch( (*( f.p)) ) {
		case 61: goto st41;
		case 95: goto st50;
		case 99: goto st48;
		case 108: goto st51;
		case 111: goto st54;
		case 114: goto st51;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st47;
st54:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof54;
case 54:
	switch( (*( f.p)) ) {
		case 61: goto st41;
		case 99: goto st48;
		case 108: goto st51;
		case 114: goto st51;
		case 116: goto st55;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st47;
st55:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof55;
case 55:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto st56;
	}
	goto st55;
st56:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof56;
case 56:
	if ( (*( f.p)) == 60 )
		goto st57;
	goto st56;
st57:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof57;
case 57:
	switch( (*( f.p)) ) {
		case 47: goto st58;
		case 60: goto st57;
	}
	goto st56;
st58:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof58;
case 58:
	switch( (*( f.p)) ) {
		case 60: goto st57;
		case 115: goto st59;
	}
	goto st56;
st59:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof59;
case 59:
	switch( (*( f.p)) ) {
		case 60: goto st57;
		case 112: goto st60;
	}
	goto st56;
st60:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof60;
case 60:
	switch( (*( f.p)) ) {
		case 60: goto st57;
		case 97: goto st61;
	}
	goto st56;
st61:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof61;
case 61:
	switch( (*( f.p)) ) {
		case 60: goto st57;
		case 110: goto st62;
	}
	goto st56;
st62:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof62;
case 62:
	switch( (*( f.p)) ) {
		case 60: goto st57;
		case 62: goto st63;
	}
	goto st56;
st63:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof63;
case 63:
	switch( (*( f.p)) ) {
		case 32: goto st63;
		case 60: goto st64;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto st63;
	goto st56;
st64:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof64;
case 64:
	switch( (*( f.p)) ) {
		case 47: goto st65;
		case 60: goto st57;
	}
	goto st56;
st65:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof65;
case 65:
	switch( (*( f.p)) ) {
		case 60: goto st57;
		case 115: goto st66;
	}
	goto st56;
st66:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof66;
case 66:
	switch( (*( f.p)) ) {
		case 60: goto st57;
		case 112: goto st67;
	}
	goto st56;
st67:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof67;
case 67:
	switch( (*( f.p)) ) {
		case 60: goto st57;
		case 97: goto st68;
	}
	goto st56;
st68:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof68;
case 68:
	switch( (*( f.p)) ) {
		case 60: goto st57;
		case 110: goto st69;
	}
	goto st56;
st69:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof69;
case 69:
	switch( (*( f.p)) ) {
		case 60: goto st57;
		case 62: goto tr74;
	}
	goto st56;
tr74:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
	goto st130;
st130:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof130;
case 130:
#line 929 "../src/parsers/allies.c"
	switch( (*( f.p)) ) {
		case 32: goto st70;
		case 60: goto st71;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto st70;
	goto tr152;
st70:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof70;
case 70:
	switch( (*( f.p)) ) {
		case 32: goto st70;
		case 60: goto st71;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto st70;
	goto tr75;
st71:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof71;
case 71:
	if ( (*( f.p)) == 47 )
		goto st72;
	goto tr75;
st72:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof72;
case 72:
	if ( (*( f.p)) == 115 )
		goto st73;
	goto tr75;
st73:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof73;
case 73:
	if ( (*( f.p)) == 112 )
		goto st74;
	goto tr75;
st74:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof74;
case 74:
	if ( (*( f.p)) == 97 )
		goto st75;
	goto tr75;
st75:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof75;
case 75:
	if ( (*( f.p)) == 110 )
		goto st76;
	goto tr75;
st76:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof76;
case 76:
	if ( (*( f.p)) == 62 )
		goto tr40;
	goto tr75;
st77:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof77;
case 77:
	switch( (*( f.p)) ) {
		case 61: goto st41;
		case 99: goto st48;
		case 108: goto st51;
		case 114: goto st51;
		case 115: goto st78;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st47;
st78:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof78;
case 78:
	switch( (*( f.p)) ) {
		case 61: goto st41;
		case 99: goto st48;
		case 108: goto st51;
		case 114: goto st51;
		case 115: goto st79;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st47;
st79:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof79;
case 79:
	switch( (*( f.p)) ) {
		case 60: goto tr0;
		case 62: goto tr0;
		case 99: goto st48;
		case 108: goto st51;
		case 114: goto st51;
	}
	goto st47;
tr147:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
	goto st131;
st131:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof131;
case 131:
#line 1038 "../src/parsers/allies.c"
	switch( (*( f.p)) ) {
		case 13: goto st82;
		case 32: goto st80;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 12 )
		goto st80;
	goto tr149;
st80:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof80;
case 80:
	if ( (*( f.p)) == 32 )
		goto tr85;
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto tr85;
	goto tr0;
tr85:
#line 28 "../src/parsers/allies.c.rl"
	{
        lmargin[5] = ( f.p);
    }
	goto st81;
st81:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof81;
case 81:
#line 1065 "../src/parsers/allies.c"
	switch( (*( f.p)) ) {
		case 32: goto st81;
		case 60: goto tr87;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto st81;
	goto tr0;
st82:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof82;
case 82:
	switch( (*( f.p)) ) {
		case 10: goto tr88;
		case 32: goto tr85;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto tr85;
	goto tr0;
tr88:
#line 28 "../src/parsers/allies.c.rl"
	{
        lmargin[5] = ( f.p);
    }
	goto st83;
st83:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof83;
case 83:
#line 1094 "../src/parsers/allies.c"
	switch( (*( f.p)) ) {
		case 32: goto tr85;
		case 60: goto tr87;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto tr85;
	goto tr0;
tr148:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
#line 111 "../src/parsers/allies.c.rl"
	{ f.act = 6;}
	goto st132;
st132:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof132;
case 132:
#line 1112 "../src/parsers/allies.c"
	if ( (*( f.p)) == 116 )
		goto st84;
	goto tr149;
st84:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof84;
case 84:
	if ( (*( f.p)) == 121 )
		goto st85;
	goto tr0;
st85:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof85;
case 85:
	if ( (*( f.p)) == 108 )
		goto st86;
	goto tr0;
st86:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof86;
case 86:
	if ( (*( f.p)) == 101 )
		goto st87;
	goto tr0;
st87:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof87;
case 87:
	if ( (*( f.p)) == 61 )
		goto st88;
	goto tr0;
st88:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof88;
case 88:
	switch( (*( f.p)) ) {
		case 102: goto st89;
		case 119: goto st96;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st88;
st89:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof89;
case 89:
	switch( (*( f.p)) ) {
		case 102: goto st89;
		case 111: goto st90;
		case 119: goto st96;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st88;
st90:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof90;
case 90:
	switch( (*( f.p)) ) {
		case 102: goto st89;
		case 110: goto st91;
		case 119: goto st96;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st88;
st91:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof91;
case 91:
	switch( (*( f.p)) ) {
		case 102: goto st89;
		case 116: goto st92;
		case 119: goto st96;
	}
	if ( 60 <= (*( f.p)) && (*( f.p)) <= 62 )
		goto tr0;
	goto st88;
st92:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof92;
case 92:
	switch( (*( f.p)) ) {
		case 45: goto st93;
		case 102: goto st89;
		case 119: goto st96;
	}
